--- a/index.html
+++ b/index.html
@@ -11,6 +11,33 @@
         <header>
             <h1>🎯 Magische Zahlen 🎯</h1>
             <p>Mathe-Übungen für die 1., 2. und 3. Klasse!</p>
+            
+            <!-- Theme-Auswahl -->
+            <div class="theme-selector">
+                <h3>🎨 Wähle dein Design:</h3>
+                <div class="theme-buttons">
+                    <button class="theme-btn" data-theme="standard">
+                        <span class="theme-icon">🌈</span>
+                        Standard
+                    </button>
+                    <button class="theme-btn" data-theme="girls">
+                        <span class="theme-icon">💖</span>
+                        Mädchen
+                    </button>
+                    <button class="theme-btn" data-theme="pirates">
+                        <span class="theme-icon">🏴‍☠️</span>
+                        Piraten
+                    </button>
+                    <button class="theme-btn" data-theme="space">
+                        <span class="theme-icon">🚀</span>
+                        Weltraum
+                    </button>
+                    <button class="theme-btn" data-theme="unicorn">
+                        <span class="theme-icon">🦄</span>
+                        Einhorn
+                    </button>
+                </div>
+            </div>
         </header>
 
         <div class="exercise-selection">
